fix button and border spacing on home page

--- a/web/static/css/header.css
+++ b/web/static/css/header.css
@@ -17,7 +17,7 @@
 
 .header {
     z-index: 100;
-    height: 80px;
+    height: 81px;
     width: 100%;
     background-color: #000000;
     text-align: center;
@@ -44,6 +44,7 @@
     transition: background-position .5s;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
+    border-bottom: none;
 }
 
 .headerButton:hover {
